Implemented meta-config module using hocon format. Moved hjson format to extensions. Adapted code to SPI changes as needed.